--- a/Age Calculator/index.html
+++ b/Age Calculator/index.html
@@ -1,36 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Age Calculator</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="wrapper">
 
-    <div class="card fade-in">
+  <div class="container">
+    <h1>Age Calculator</h1>
 
-      <h1>Age Calculator</h1>
-
-      <p class="subtitle">Enter your birth date</p>
-
-      <form id="form">
-        <div class="inputs">
-          <input type="number" id="day" placeholder="DD">
-          <input type="number" id="month" placeholder="MM">
-          <input type="number" id="year" placeholder="YYYY">
-        </div>
-
-        <button type="submit" class="btn">Calculate</button>
-        <p id="error"></p>
-      </form>
-
-      <div id="output" class="output-box hidden"></div>
-
+    <div class="input-boxes">
+      <input id="day" placeholder="DD">
+      <input id="month" placeholder="MM">
+      <input id="year" placeholder="YYYY">
     </div>
+
+    <button class="btn" id="calcBtn">Calculate</button>
+
+    <p id="result"></p>
+    <p id="error"></p>
   </div>
 
   <script src="script.js"></script>
+
 </body>
 </html>
